tests/terminate/neg/total00.hs
module Test0 where

foo :: Int -> Int 
foo 0 = 0 
foo 1 = 1
